fix: tweak spacing, related breakpoints

--- a/src/components/command-bar/components/activator/command-bar-activator.module.css
+++ b/src/components/command-bar/components/activator/command-bar-activator.module.css
@@ -20,8 +20,8 @@
 	box-shadow: inset 0 0 0 1px rgba(222, 223, 227, 0.3),
 		inset 0 1px 2px 1px rgba(222, 223, 227, 0.1);
 
-	/* Show icon-only starting at 1023px and narrower */
-	@media only screen and (max-width: 1023px) {
+	/* Show icon-only starting at 1071px and narrower */
+	@media only screen and (max-width: 1071px) {
 		padding: 10px;
 
 		& .leadingIcon {
