--- a/src/components/navigation-header/components/dropdown-menu/dropdown-menu.module.css
+++ b/src/components/navigation-header/components/dropdown-menu/dropdown-menu.module.css
@@ -18,7 +18,7 @@
 	border-radius: 5px;
 	border: 0;
 	display: flex;
-	padding: 8px;
+	padding: 8px 12px;
 
 	&[aria-expanded='true'] {
 		& .activatorText {
