--- a/src/components/navigation-header/components/nav-bar-list-container/nav-bar-list-container.module.css
+++ b/src/components/navigation-header/components/nav-bar-list-container/nav-bar-list-container.module.css
@@ -1,4 +1,7 @@
 .nav {
+	/* Compensates for padding on individual nav list items */
+	margin-left: -12px;
+
 	@media (--dev-dot-show-mobile-menu) {
 		display: none;
 	}
