--- a/src/components/navigation-header/components/primary-nav-link/primary-nav-link.module.css
+++ b/src/components/navigation-header/components/primary-nav-link/primary-nav-link.module.css
@@ -8,7 +8,7 @@
 	border-radius: 5px;
 	color: var(--token-color-surface-strong);
 	display: flex;
-	padding: 8px;
+	padding: 8px 12px;
 
 	&:hover {
 		color: var(--token-color-surface-primary);
