--- a/src/layouts/core-dev-dot-layout/core-dev-dot-layout.module.css
+++ b/src/layouts/core-dev-dot-layout/core-dev-dot-layout.module.css
@@ -14,7 +14,7 @@
 	--tablet-width-breakpoint: 1000px;
 
 	/** Should correspond to --dev-dot-hide-mobile-menu */
-	--mobile-menu-breakpoint: 880px;
+	--mobile-menu-breakpoint: 924px;
 
 	/* Font overwrites */
 	--font-body: var(--token-typography-font-stack-text);
